# ChangeLog for net-p2p/freenet
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 May 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_pre1146.ebuild, +freenet-0.7_pre1148.ebuild,
  +files/freenet.old:
  New upstream release

  06 May 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_pre1145.ebuild, +freenet-0.7_pre1146.ebuild,
  freenet-9999.ebuild:
  New upstream release + update live ebuild

  04 May 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +freenet-0.7_pre1145.ebuild, -freenet-0.7_rc2_p1144.ebuild,
  freenet-9999.ebuild:
  New upstream release + update live ebuild

  30 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  freenet-0.7_rc2_p1144.ebuild, freenet-9999.ebuild:
  Fix dependencies

  26 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_rc2_pre1143.ebuild, +freenet-0.7_rc2_p1144.ebuild,
  freenet-9999.ebuild:
  New upstream release + update live ebuild

  24 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_rc2_pre1142.ebuild, +freenet-0.7_rc2_pre1143.ebuild:
  New upstream release

  22 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_rc2_pre1141.ebuild, +freenet-0.7_rc2_pre1142.ebuild,
  freenet-9999.ebuild:
  New upstream release + update live ebuild

  20 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  freenet-0.7_rc2_pre1141.ebuild, freenet-9999.ebuild:
  Update deps

  17 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> files/freenet:
  Update script to work with baselayout-2

  16 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_rc2_pre1140.ebuild, +freenet-0.7_rc2_pre1141.ebuild:
  New upstream release

  15 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_rc2_pre1139.ebuild, +freenet-0.7_rc2_pre1140.ebuild:
  New upstream release

  14 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>