@@ -5,7 +5,7 @@ AUX wrapper.conf.patch 691 RMD160 a4f534fb81d20972d80d16a579a5f493918149d1 SHA1 
 DIST freenet-0.7_pre1148.tar.bz2 1962771 RMD160 22037709d06a53ce282ffe58b47a0f4f2f3dc5e4 SHA1 ecedd953f64357a902d24f2ce1d9ca15ab2610f4 SHA256 3df7a25b51123fbd89e02c5b0423c790c18d2f48cde7712e6de44107b3903726
 DIST seednodes-20080506.fref 33963 RMD160 9c58dda7ea8d33219771722f74bd2027cbf0fee2 SHA1 a2d90017bc1532d6d3590bbe9b62c7b83c3d7b2b SHA256 ae54eeb0f7c3a8691196461df0295602a36d8dd6c66abe5c2147386d063dbf59
 DIST wrapper-20080330.conf 1667 RMD160 77c0e4d379521ce10da408dd35ec0ebb5c82f4a9 SHA1 7f8679579c47e2c0644d26c67c26d779bf6f8d75 SHA256 70a98acb43b43b00b45bda40de5745ba188d366dd69c5d97968aa4494b7441f0
-EBUILD freenet-0.7_pre1148.ebuild 3206 RMD160 fdd35581dbf5595dfe50d1a6712a26cf3717eada SHA1 a7e1a615a2ee174ce4a1254254c23f75660a6fbd SHA256 7fdc9a45526dd3c0dd7977bc57d37e7ce810b359a148b76bce1f2ce20019cb3e
+EBUILD freenet-0.7_pre1148.ebuild 3077 RMD160 508399bebc07ecb70bd18d59835c7005ef02dd52 SHA1 71bed49360ceb6160299719232262ba969f0482f SHA256 7cc5860ba3720fff6744e080d721adbf918293acc6f7a4fd57ddb37d542c72c6
 EBUILD freenet-9999.ebuild 3580 RMD160 05b4e57701ae2a1620bdcff7e5c1b0db3b68a361 SHA1 fcc60d6b35e4a1ce06cb4ce698cc861170bb85a9 SHA256 021cf376fbe4494c186a16fbdbe00bdc10c4e06757ee7494d30401d2c6286c43
-MISC ChangeLog 9509 RMD160 a23496df0bbb1021860293d93aadc188ac82706e SHA1 a2f6cb9e93aac6af684b990a21b32dc615aef5dd SHA256 d8ac49aff6c2b08d06967814cf81614ce0ea4df0406b8000e7718c538a67de79
+MISC ChangeLog 9626 RMD160 8d02e55c06562e7d3d631b9c6b5cad826fdbb464 SHA1 74e55529bb5188bc5db5cfc8ac491f80ffc76133 SHA256 c8f73a4f12dd529f187605d2c21e8dbdbb7d812bbd271a4b6ea2f58935d80308
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
